[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/character_select.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://dxrvcd7nrpprv" path="res://assets/fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="2_font"]

[node name="CharacterSelect" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.067, 0.082, 0.125, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="VBoxContainer/TopBar"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "< BACK"

[node name="TitleLabel" type="Label" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.298, 0.886, 0.404, 1)
theme_override_colors/font_shadow_color = Color(0.15, 0.4, 0.2, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "SELECT CHARACTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/TopBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="CharactersContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="SelectButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.15, 0.1, 0.05, 1)
theme_override_colors/font_pressed_color = Color(0.15, 0.1, 0.05, 1)
theme_override_colors/font_hover_color = Color(0.1, 0.05, 0, 1)
theme_override_colors/font_focus_color = Color(0.15, 0.1, 0.05, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "START GAME"

[node name="BottomSpacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
